--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ comments:
 #  isso: "comments.mysite.org"
 
 links: # see http://fontawesome.io/icons/#brand for all possible icons
-  - twitter: "https://twitter.com/twitter/"
+  - twitter: "https://twitter.com/sid-devic"
   - github: "https://github.com/sid-devic"
   - envelope: "mailto:niklas.buschmann@posteo.de"
 
