--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@ title: "Blog Title"
 author: "Blog Author"
 description: "Really cool blog about ... something"
 more: "read more »"
-url: "https://niklasbuschmann.github.io/"
-baseurl: "/"
+url: "http://159.203.183.245"
+baseurl: ""
 paginate: 2
 permalink: pretty
 excerpt_separator: "\n\n\n" # two blank lines
