--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,16 @@
-title: "Blog Title"
-author: "Blog Author"
-description: "Really cool blog about ... something"
-more: "read more »"
+title: "musings.me"
+author: "sid devic"
+description: "tech musings and projects"
+more: "read »"
 url: "http://159.203.183.245"
 baseurl: ""
-paginate: 2
+paginate: 4
 permalink: pretty
 excerpt_separator: "\n\n\n" # two blank lines
 
 style:
   minimalist: false
-  dark: false
+  dark: true
 
 navigation:
   - index.html
@@ -24,7 +24,7 @@ comments:
 links: # see http://fontawesome.io/icons/#brand for all possible icons
   - twitter: "https://twitter.com/sid-devic"
   - github: "https://github.com/sid-devic"
-  - envelope: "mailto:niklas.buschmann@posteo.de"
+  - envelope: "mailto:sid.devic@utd.edu"
 
 defaults: [{scope: {path: ""}, values: {layout: "default"}}, {scope: {path: "", type: "posts"}, values: {comments: true}}]
 sass: {style: expanded}
