--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: "musings.me"
 author: "sid devic"
 description: "tech musings and projects"
-more: "read »"
+more: "read more »"
 url: "http://159.203.183.245"
 baseurl: ""
 paginate: 4
