--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: "musings.me"
 author: "sid devic"
 description: "tech musings and projects"
 more: "read more »"
-url: "http://159.203.183.245"
+url: ""
 baseurl: ""
 paginate: 4
 permalink: pretty
