--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: "Shamir Centeno Padilla"
-author: "Blog Author"
+author: "Shamir Centeno Padilla"
 description: "University of Virginia"
 permalink: /:title/
 lang: "en"
