--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ minimal: true             # use a dark header
 navigation:                # accepts {file, title, url, icon, sidebaricon}
   - {file: "index.md", title: "Home" }
   - {file: "file:///C:/Users/Shamir Centeno/Desktop/Centeno Padilla's Resume PDF", title: "Resume" }
-  - {file: "README.md", title: "About Me"}
+  - {file: "README.md", title: "Projects"}
 
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
   - {title: Mail, icon: envelope, url: "mailto:rns7bw@virginia.edu"}
