--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 title: "Shamir Centeno Padilla"
 author: "Shamir Centeno Padilla"
 description: "University of Virginia"
+url: "shamircenteno.com"
 permalink: /:title/
 lang: "en"
 excerpt_separator: "\n\n\n"
