--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: "Shamir Centeno Padilla"
 author: "Shamir Centeno Padilla"
 description: "University of Virginia"
-url: "shamircenteno.com"
+url: "shamircentenopadilla.us"
 permalink: pretty
 lang: "en"
 excerpt_separator: "\n\n\n"
