--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ navigation:                # accepts {file, title, url, icon, sidebaricon}
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
   - {title: Mail, icon: envelope, url: "mailto:rns7bw@virginia.edu"}
   - {title: Github, icon: github, url: "https://github.commrshamir7"}
-  - {title: LinkedIn, icon: LinkedIn, url: "https://www.linkedin.com/in/shamir-centeno-bb5b03215"}
+  - {title: LinkedIn, icon: linkedin, url: "https://www.linkedin.com/in/shamir-centeno-bb5b03215"}
 
 comments:
 #  disqus_shortname: ""    # see https://disqus.com/
