--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ minimal: false             # use a dark header
 
 navigation:                # accepts {file, title, url, icon, sidebaricon}
   - {file: "index.md", title: "Home" }
-  - {file: "/assets/Centeno_Padilla_Resume_PDF.pdf", title: "Resume" }
+  - {file: "resume.md", title: "Resume" }
   - {file: "README.md", title: "Projects"}
 
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
