--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,7 @@ navigation:                # accepts {file, title, url, icon, sidebaricon}
   - {file: "index.md", title: "Home" }
   - {file: "resume.md", title: "Resume" }
   - {file: "README.md", title: "Projects"}
+  - {file: "Experience.md", title: "Experience"}
 
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
   - {title: Mail, icon: envelope, url: "mailto:rns7bw@virginia.edu"}
