--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ minimal: true             # use a dark header
 # Menu
 
 navigation:                # accepts {file, title, url, icon, sidebaricon}
-  - {file: "index.md", title: "Home" }
+  - {file: "index.html", title: "Home" }
   - {file: "resume.md", title: "Resume" }
   - {file: "README.md", title: "Projects"}
   - {file: "Experience.md", title: "Experience"}
